# AproxFractRational

./: AproxFractRational.cpp  AproxFractRational.h  CMakeLists.txt
